# fastapi_project

./: .gitignore  alembic.ini  asgi.py  pyproject.toml
_dev/: docker-compose.yml
app/: main.py
app/api/routes/: transaction.py  user.py
app/core/: config.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 369268506f92_update_transaction_table.py  c0dd1aed416c_added_users_and_transactions_models.py
app/models/: transaction.py  user.py
app/repositories/: transaction.py  user.py
app/schemas/: transaction.py  user.py
app/services/: transaction.py  user.py
